# c_template

./: .gitignore  CMakeLists.txt  build.bat  build.sh  install_deps.bat  run.bat  run.sh
include/: magic.h
src/: main.c
